terraform/alb.tf
# resource "aws_lb" "main" {
#   name               = "${var.system}-${var.env}-alb"
#   internal           = false
#   load_balancer_type = "application"
#   security_groups    = [aws_security_group.alb.id]
#   subnets            = [aws_subnet.public.id]
# }

# resource "aws_lb_listener" "https" {
#   load_balancer_arn = aws_lb.main.arn
#   port              = "443"
#   protocol          = "HTTPS"

#   default_action {
#     type = "forward"
#     target_group_arn = aws_lb_target_group.main.arn
#   }

#   ssl_policy = "ELBSecurityPolicy-2021-06"
#   certificate_arn = aws_acm_certificate.main.arn
# }

# resource "aws_lb_target_group" "main" {
#   name     = "${var.system}-${var.env}-tg"
#   port     = 80
#   protocol = "HTTP"
#   vpc_id   = aws_vpc.main.id
# }
